kubernetes-manifests/sso-client-app/sso-client-app-1.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-client-app-1
  namespace: default
  labels:
    app: sso-client-app-1
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso-client-app-1
      tier: frontend
  template:
    metadata:
      labels:
        app: sso-client-app-1
        tier: frontend
    spec:
      containers:
        - name: sso-client-app-1
          image: sso-client-app-1
          ports:
            - containerPort: 8080
              name: http-server
